# cap_general

./: .gitignore  README.md  pyproject.toml  requirements.txt
cap_general/: __init__.py
cap_general/core/: __init__.py  base.py  env.py  executor.py  models.py  result.py
cap_general/core/agent/: __init__.py  base_agent.py
cap_general/core/apis/: __init__.py  base.py
cap_general/core/env/: __init__.py  (+1 more)
cap_general/frameworks/: __init__.py
cap_general/genesis/: __init__.py
cap_general/interface/: __init__.py  main.py
cap_general/libero/: __init__.py
cap_general/skills/: SKILL.md
configs/: libero_agent.yaml  robosuite_agent.yaml
configs/genesis/: all_agent.yaml  drone_agent.yaml  franka_agent.yaml  genesis_franka_agent.yaml  genesis_go2_agent.yaml  genesis_multi_agents.yaml  go2_agent.yaml  grasp_agent.yaml  multi_agents.yaml
configs/libero/: libero_agent.yaml
configs/robosuite/: robosuite_agent.yaml
examples/genesis/: franka_cube_task.py
outputs/libero/: code.py  info.json
tests/: test_core.py  test_env.py  test_graph.py  test_interface.py  test_monitor.py  test_robot.py  test_scene.py  utils.py
tests/genesis/: __init__.py  test_agents.py  test_all.py  test_core.py  test_drone_agent.py  test_env.py  test_franka_agent.py  test_franka_api.py  test_genesis_drone_agent.py  test_genesis_franka_agent.py  test_genesis_go2_agent.py  test_genesis_grasp_agent.py  test_genesis_multi_agents.py  test_go2_agent.py  test_grasp_agent.py  test_multi_agents.py
tests/libero/: __init__.py  test_libero_agent.py
tests/robosuite/: test_robosuite_agent.py
(+133 files in other folders)
